Archive2/38/1d18b58f23bed4/output
main.cpp:7:1: error: 'main' must return 'int'
void main()
^~~~
int
main.cpp:13:11: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
      if(i=0)
         ~^~
main.cpp:13:11: note: place parentheses around the assignment to silence this warning
      if(i=0)
          ^
         (  )
main.cpp:13:11: note: use '==' to turn this assignment into an equality comparison
      if(i=0)
          ^
          ==
main.cpp:15:11: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
      if(i=1)
         ~^~
main.cpp:15:11: note: place parentheses around the assignment to silence this warning
      if(i=1)
          ^
         (  )
main.cpp:15:11: note: use '==' to turn this assignment into an equality comparison
      if(i=1)
          ^
          ==
main.cpp:17:11: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
      if(i=2)
         ~^~
main.cpp:17:11: note: place parentheses around the assignment to silence this warning
      if(i=2)
          ^
         (  )
main.cpp:17:11: note: use '==' to turn this assignment into an equality comparison
      if(i=2)
          ^
          ==
main.cpp:19:11: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
      if(i=3)
         ~^~
main.cpp:19:11: note: place parentheses around the assignment to silence this warning
      if(i=3)
          ^
         (  )
main.cpp:19:11: note: use '==' to turn this assignment into an equality comparison
      if(i=3)
          ^
          ==
4 warnings and 1 error generated.
